--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/stack": "^7.3.3",
     "expo": "^52.0.7",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.1.23",
