finished create deck logic

--- a/package.json
+++ b/package.json
@@ -17,13 +17,18 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.3",
+    "dotenv": "^16.5.0",
     "expo": "^52.0.7",
+    "expo-constants": "~17.0.8",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^4.1.23",
+    "random-gradient": "^0.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-native": "0.76.1",
     "react-native-css-interop": "^0.1.22",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.25.0",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
@@ -34,6 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/random-gradient": "^0.0.2",
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
