--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
