--- a/package.json
+++ b/package.json
@@ -12,37 +12,37 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-masked-view/masked-view": "^0.3.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "@react-navigation/stack": "^7.3.3",
     "dotenv": "^16.5.0",
-    "expo": "^52.0.7",
-    "expo-constants": "~17.0.8",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-status-bar": "~1.12.1",
+    "expo": "^53.0.11",
+    "expo-constants": "~17.1.6",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-status-bar": "~2.2.3",
     "nativewind": "^4.1.23",
     "random-gradient": "^0.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-native": "0.76.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.3",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
-    "react-native-gesture-handler": "^2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-svg": "^15.2.0",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "^0.20.0",
     "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/random-gradient": "^0.0.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
     "eslint": "^8.57.0",
@@ -51,7 +51,7 @@
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.17",
-    "typescript": "~5.3.3"
+    "typescript": "~5.8.3"
   },
   "eslintConfig": {
     "extends": "universe/native",
