--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native": "0.79.3",
     "react-native-css-interop": "^0.1.22",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fast-confetti": "^1.0.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^3.17.4",
     "react-native-safe-area-context": "^5.4.0",
